engines/infrastructure/kubernetes/08-nodeport-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-nodeport
  namespace: arabic-morphophon
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080  # Available on all nodes on port 30080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-nodeport
  namespace: arabic-morphophon
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081  # Available on all nodes on port 30081
